app/exchange-svc/deploy/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    workload.user.cattle.io/workloadselector: dm-develop-exchange-svc
  name: exchange-svc
  namespace: develop
spec:
  minReadySeconds: 5
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: dm-develop-exchange-svc
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: dm-develop-exchange-svc
    spec:
      containers:
        - env:
          - name: GIN_MODE
            value: debug
          image: harbor.local.com/mateforce/exchange-svc:VERSION_NUMBER
          imagePullPolicy: Always
          name: exchange-svc
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m	# CPU最小是200微核
          ports:
            - containerPort: 9530
              name: http
              protocol: TCP
            - containerPort: 5000
              name: health
              protocol: TCP
            - containerPort: 8084
              name: grpc
              protocol: TCP
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
status:
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1

---
apiVersion: v1
kind: Service
metadata:
  labels:
    cattle.io/creator: norman
  name: exchange-svc
  namespace: develop
spec:
  ports:
    - name: http
      port: 9530
      protocol: TCP
      targetPort: 9530
    - name: healthz
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    workload.user.cattle.io/workloadselector: dm-develop-exchange-svc
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---
# http ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exchange-ingress
  namespace: develop
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
      #配置websocket 需要的配置
    nginx.ingress.kubernetes.io/configuration-snippet: |
       proxy_set_header Upgrade "websocket";
       proxy_set_header Connection "Upgrade";
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: exchange-svc
    nginx.org/websocket-services: exchange-svc
spec:
  rules:
    - host: yun.mateforce.cn
      http:
        paths:
          - path: /exchange
            pathType: Prefix
            backend:
              service:
                name: exchange-svc
                port:
                  number: 9530
  # tls:
  #   - hosts:
  #       - zuyyjv.natappfree.cc
  #     secretName: tls-secret-dev
